--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -11,28 +11,112 @@ html {
 }
 
 img {
-  float:right;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 50%;
 }
 
-h1.title {
+h1.site-title {
   font-size:2em;
-  color:red;
+  text-align: center;
 }
+
 
 article, aside, details, figcaption, figure, footer, header, hgroup,
 main, menu, nav, section, summary {
     display: block;
 }
 
-body {
-    font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, Arial, sans-serif;
-    margin: 30px;
-    font-size: 1.25em;
+div.content {
+  background-color: #F9F1D1;
+  padding: 25px 20px 25px 20px;
+  max-width: 900px; min-width: 500px;
+  width: auto;
+  margin: auto;
 }
 
-h1.site-title {
-font-size: 2.5em;
+#post-nav {
+  text-align: center;
+  max-width: 625px; min-width: 475px;
+  margin: auto;
+  color: #57880b;
+  font-size: 1em;
+  padding: 5px;
+}
+
+#previous-post {
+  border-top: double;
+  padding-bottom: 5px;
+}
+
+#next-post {
+  border-bottom: double;
+  border-top: dashed;
+  border-top-width: thin;
+  padding-top: 5px;
+}
+
+body {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  background-color: #FAD556;
+  margin: 30px;
+  font-size: 1.25em;
+  margin: auto;
+  padding: 0px 50px 0px 50px;
+}
+
+h1.title {
+  font-size: 1.9em;
+  color: #57880b;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.5em;
+  padding: 0px 5px 2.5px 20px;
+  color: #1E4305;
+}
+
+h3 {
+  font-size: 1em;
+  padding: 0px 5px 2.25px 15px;
+  color: #57880B;
+}
+
+p {
+  font-size: 0.75em;
+  margin: auto;
+  padding: 0px 5px 10px 5px;
+  text-align: center;
+}
+
+p.tip {
+  font-size: 0.75em;
+  color: #57880b;
+  margin: auto;
+}
+
+ul {
+  list-style-position: outside;
+  list-style-type: square;
+  font-size: 0.75em;
+  padding: 0px 5px 0px 25px
+}
+
+#info {
+  list-style-type: none;
+  text-align: center;
+  font-size: 0.75em;
+  padding: 0px 0px 0px 15px;
+}
+
+ol {
+  list-style-position: outside;
+  list-style-type: decimal;
+  margin: 15px 0px;
+  font-size: 0.75em;
+  padding: 0px 5px 5px 25px;
 }
 
 img.cover {
