--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -36,6 +36,7 @@ div.content {
   margin: auto;
 }
 
+/* Navigation */
 #post-nav {
   text-align: center;
   max-width: 625px; min-width: 475px;
@@ -57,6 +58,7 @@ div.content {
   padding-top: 5px;
 }
 
+/* Main Information  */
 body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   background-color: #FAD556;
@@ -97,18 +99,12 @@ p.tip {
   margin: auto;
 }
 
+/* Lists */
 ul {
   list-style-position: outside;
-  list-style-type: square;
-  font-size: 0.75em;
-  padding: 0px 5px 0px 25px
-}
-
-#info {
   list-style-type: none;
-  text-align: center;
   font-size: 0.75em;
-  padding: 0px 0px 0px 15px;
+  padding: 0px 5px 0px 25px;
 }
 
 ol {
@@ -117,6 +113,10 @@ ol {
   margin: 15px 0px;
   font-size: 0.75em;
   padding: 0px 5px 5px 25px;
+}
+
+li {
+  margin: 0.25em 0;
 }
 
 img.cover {
@@ -153,18 +153,33 @@ hr {
     margin: 1em 0;
 }
 
-a {
-    color: #337ab7;
-    text-decoration: none
+/* Hyperlinks */
+a:link {
+  color: #1E4305;
+  text-decoration:none;
+}
+
+a:visited {
+  color: #57880b;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #A08837;
+  text-decoration: none;
+}
+
+a:active {
+  color: #385708;
+  text-decoration: none;
 }
 
 /* for a menu for all recipes */
 ul.recipes {
-  border: 1px solid gray;
-  width: 15%;
+  min-width: 100px; max-width: 150px;
   float:right;
+  position: relative;
   font-size: 60%;
-  position: absolute;
   top:40px;
   right:20px;
 }
