--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -3,7 +3,7 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    background: #fff;
+    background-color: #FAD556;
 }
 
 .post-content h1, .excerpt h1 {
@@ -28,22 +28,10 @@ main, menu, nav, section, summary {
     display: block;
 }
 
-div.content {
-  background-color: #F9F1D1;
-  padding: 25px 20px 25px 20px;
-  max-width: 900px; min-width: 500px;
-  width: auto;
-  margin: auto;
-  border: double;
-  border-color: #FAD556;
-  border-width: 15px;
-  border-radius: 100px;
-}
-
 /* Navigation */
 #post-nav {
   text-align: center;
-  max-width: 600px; min-width: 475px;
+  max-width: 300px; min-width: 200px;
   margin: auto;
   color: #57880b;
   font-size: 1em;
@@ -68,10 +56,16 @@ div.content {
 /* Main Information  */
 body {
   font-family: Tahoma, Geneva, sans-serif;
-  background-color: #FAD556;
+  background-color: #F9F1D1;
   font-size: 1.25em;
-  margin: auto;
-  padding: 40px 50px 40px 50px;
+  margin: 12px auto;
+  padding: 0px 40px 40px 40px;
+  width: 70%;
+  border: double;
+  border-color: #FAD556;
+  border-width: 15px;
+  border-radius: 100px;
+  margin:10px auto;
 }
 
 h1.title {
@@ -125,18 +119,9 @@ li {
   margin: 0.25em 0;
 }
 
-img.cover {
-float:right;
-width:30%;
-margin:12px;
-max-width: 475px; min-width: 275px;
-}
-
-
 blockquote {
 
 }
-
 
 table {
 
@@ -146,12 +131,10 @@ td, th {
 
 }
 
-
 p, ol, ul {
     line-height: 1.5;
     margin-bottom: 1em;
 }
-
 
 hr {
     border: 0;
@@ -190,3 +173,16 @@ ul.recipes {
   top:40px;
   right:20px;
 }
+
+p.homepage {
+  border: red solid;
+  text-align: left;
+  width: 70%;
+}
+
+img.cover {
+  float: right;
+  width:30%;
+  margin:12px;
+  max-width: 475px; min-width: 275px;
+  }
