--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -69,7 +69,7 @@ body {
   margin:10px auto;
 }
 
-h1.title {
+h1 {
   font-size: 2em;
   color: #57880b;
   text-align: center;
@@ -174,6 +174,7 @@ ul.recipes {
   top:40px;
   right:20px;
 }
+
 
 /* for the homepage */
 
